# bytediff

./: .gitignore  README.md  conftest.py  pyproject.toml
benchmarks/: __init__.py  bench_tape.py
bytediff/: __init__.py  grad.py  tracer.py
bytediff/bytecode/: __init__.py  analyzer.py  patcher.py  rewriter.py  vjp_registry.py
bytediff/cffi_ext/: __init__.py  build_ext.py  tape_ext.py
tests/: __init__.py  test_analyzer.py  test_grad_api.py  test_tape.py  test_tracer.py  test_vjp_registry.py
