[build-system]
requires = ["setuptools>=68", "wheel", "cffi>=1.15"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bytediff"
version = "0.1.0"
description = "Differentiable Python bytecode rewriter for closed-source autodiff (CPython 3.12+)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "bytediff contributors" }]
keywords = ["autodiff", "automatic-differentiation", "bytecode", "cpython", "gradients"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "cffi>=1.15",
    "bytecode>=0.15",
]
cffi = ["cffi>=1.15"]
bytecode = ["bytecode>=0.15"]

[project.urls]
Repository = "https://github.com/bytediff/bytediff"
Issues     = "https://github.com/bytediff/bytediff/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bytediff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["bytediff"]
omit   = ["*/__pycache__/*", "*/cffi_ext/build_ext.py"]

[tool.coverage.report]
show_missing = true
fail_under   = 70
